<resources>
    <string name="app_name">My英単語</string>

    <string name="color_change">背景色を変えたい場合は下のボタンを押す</string>

    <string name="edit_text">登録されている単語一覧</string>
    <string name="instrction_word_ist">修正は単語をタップ、削除の場合は長押ししてください</string>

    <!--編集画面-->
    <string name="edit_instruction">問題と答えを入力して登録ボタンを押してください</string>
    <string name="question">問題</string>
    <string name="answer">答え</string>

    <string name="status_add">新しい単語の追加</string>
    <string name="status_change">登録した単語の修正</string>

    <string name="intent_key_status">intent_key_status</string>
    <string name="intent_key_question">intent_key_question</string>
    <string name="intent_key_answer">intent_key_answer</string>
    <string name="intent_key_position">intent_key_position</string>

    <string name="intent_key_memory_flag">intent_key_memory_flag</string>

    <string name="db_field_question">strQuestion</string>
    <string name="db_field_answer">strAnswer</string>
    <string name="db_field_memory_flag">boolMemoryFlag</string>
    
    <!--  ラジオボタン  -->
    <string name="radio_button_01">暗記済みの単語を除外する</string>
    <string name="radio_button_02">暗記済みの単語を含む</string>

    <string name="word_list_sort">暗記済みは下に</string>
    <string name="check_box_word">暗記済みにする場合はチェックを入れてください</string>
</resources>

